  - fix "Fin Dist" infobox for GOTO tasks (#3152)
* configuration
  - increase upper limit for plane wing area (#3154)
  - fix saving of custom polars (#3173)
* waypoints
  - correctly handle S latitudes and W longitudes in waypoint editor (#3155)
  - fix saving waypoints to cup format files from waypoint editor
* devices
  - auto-reconnect TCP client (#3127)
  - handle time warps in NMEA replay
* Android
  - enable Vivante workaround for GC600 (#3184)
  - faster map renderer (#3124)
  - improved font quality
  - enable cursor key navigation in dialogs (#3133)
* Kobo
  - fix misassigned passphrase in WiFi dialog (#3151)
  - work around Kobo Touch N905B kernel crash in display driver (#3145)
  - work around Kobo Touch N905B touch screen bug
  - the "Home" button opens the menu
  - mount /dev/pts for telnetd (#3135)
  - fix crash in file manager and METAR/TAF dialog (#3078)

Version 6.7.1 - 2013/10/11
* replay
  - fix crash replaying an IGC file with no B record extensions (#3107)
* data files
  - save the previous log file in "xcsoar-old.log"
* user interface
  - new translation: Lithuanian
* devices
  - CAI302: work around transmission errors during IGC file download (#3074)
* Android
  - fix crash in "credits" dialog on Android 4 (#3106)
  - work around Vivante GPU texture bugs (#1995, #2228, #2990, #2998, #3105)
* Kobo
  - fix passphrase entry in WiFi setup (#3053)
  - fix compatibility with old Kobo firmware

Version 6.7 - 2013/09/30
* new target: Kobo e-book readers
* user interface
  - resizable main window
  - added AutoZoom gesture (up-down)
  - obsolete configuration pages "devices", "polar", "logger info" removed
  - new page: "horizon" (#1592)
  - default page gesture changed right/left sense according to other xc ui interaction pattern
  - pressing the Escape key in task manager switches to "Close" tab (#2877)
  - separate font for dialogs (#723, #2806)
  - repetitive airspace warning sound (#2952)
  - never close dialogs due to display rotation