@@ -17,6 +17,7 @@ Version 6.7.2 - not yet released
 * devices
   - auto-reconnect TCP client (#3127)
   - handle time warps in NMEA replay
+  - another midnight wraparound bug fix (#2973)
 * Android
   - enable Vivante workaround for GC600 (#3184)
   - faster map renderer (#3124)
